Agregue los archivos de Registro y Login

--- a/angular.json
+++ b/angular.json
@@ -1,15 +1,22 @@
+
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "practicaEquipo": {
+    "my-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
           "strict": true
+
         }
       },
+
+
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -17,7 +24,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/practicaEquipo",
+            "aot" : true,
+            "outputPath": "dist/my-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,12 +35,12 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/custom-theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
@@ -71,10 +79,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "practicaEquipo:build:production"
+              "browserTarget": "my-app:build:production",
+              "proxyConfig": "src/proxy.conf.json"
+
             },
             "development": {
-              "browserTarget": "practicaEquipo:build:development"
+              "browserTarget": "my-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +92,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "practicaEquipo:build"
+            "browserTarget": "my-app:build"
           }
         },
         "test": {
@@ -105,5 +115,5 @@
       }
     }
   },
-  "defaultProject": "practicaEquipo"
+  "defaultProject": "my-app"
 }
