--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "practica-equipo",
+  "name": "my-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/file-input": "^6.0.0",
     "@angular/animations": "~12.0.0",
+    "@angular/cdk": "^12.0.1",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
     "@angular/forms": "~12.0.0",
+    "@angular/material": "^12.0.1",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@nestjs/core": "^7.6.17",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
+    "ngx-cookie-service": "^12.0.0",
+    "ngx-spinner": "^0.0.2",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -31,6 +40,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
+    "json-server": "^0.15.1",
+    "json-server-auth": "^2.0.2",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
