--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ngcc"
+    "nghm": "node --max_old_space_size=8086 ./node_modules/@angular/cli/bin/ng"
   },
   "private": true,
   "dependencies": {
@@ -22,12 +22,8 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
-    "@auth0/angular-jwt": "^5.0.2",
-    "@nestjs/core": "^7.6.17",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
-    "ngx-cookie-service": "^12.0.0",
-    "ngx-spinner": "^0.0.2",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
@@ -40,7 +36,6 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
-    "json-server": "^0.15.1",
     "json-server-auth": "^2.0.2",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
