--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~12.0.0",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
+    "hamburgers": "^1.1.3",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
