--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@angular-material-components/file-input": "^6.0.0",
     "@angular/animations": "~12.0.0",
-    "@angular/cdk": "^12.0.1",
+    "@angular/cdk": "^12.1.2",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.0",
     "@angular/material": "^12.0.1",
     "@angular/platform-browser": "~12.0.0",
