--- a/Backend/PilMoney/Web.config
+++ b/Backend/PilMoney/Web.config
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="PilMoneyEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-C21HG06\SQLEXPRESS;initial catalog=PilMoney;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PilMoneyEntities" connectionString="Data Source=DESKTOP-PM31PE6;Initial Catalog=PilMoney;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
