--- a/Backend/PilMoney/bin/PilMoney.dll.config
+++ b/Backend/PilMoney/bin/PilMoney.dll.config
@@ -9,17 +9,28 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="JWT_SECRET_KEY" value="clave-secreta-api" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:44385" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:44385" />
+    <add key="JWT_EXPIRE_MINUTES" value="60" />
+	
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <pages>
+		  <namespaces>
+			  <add namespace="System.Web.Helpers" />
+			  <add namespace="System.Web.Mvc" />
+			  <add namespace="System.Web.Mvc.Ajax" />
+			  <add namespace="System.Web.Mvc.Html" />
+			  <add namespace="System.Web.Routing" />
+			  <add namespace="System.Web.WebPages" />
+		  </namespaces>
+	  </pages>
   </system.web>
   <system.webServer>
-	  <validation validateIntegratedModeConfiguration="false"/>
+	  <validation validateIntegratedModeConfiguration="false" />
 	  <modules runAllManagedModulesForAllRequests="true">
 		  <remove name="WebDAVModule" />
 	  </modules>
