--- a/Backend/PilMoney/packages.config
+++ b/Backend/PilMoney/packages.config
@@ -5,7 +5,6 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
-
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -32,6 +31,9 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.12.2" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
@@ -39,6 +41,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.12.2" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
