--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.5.0",
     "hamburgers": "^1.1.3",
     "json-server": "^0.16.3",
+    "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
