--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -29,7 +29,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            
+
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -44,7 +44,9 @@
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
+
             "production": {
+              "sourceMap": true,
               "budgets": [
                 {
                   "type": "initial",
