--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "json-server": "^0.16.3",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.0.0",
+    "randomstring": "^1.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -39,6 +40,7 @@
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/randomstring": "^1.1.7",
     "jasmine-core": "~3.7.0",
     "json-server-auth": "^2.0.2",
     "karma": "~6.3.0",
